# skill_python_data_fundamentals

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: intro-to-python.ipynb
python_data_fundamentals/: __init__.py  dataset.py  features.py  plots.py
python_data_fundamentals/modeling/: predict.py  train.py
