[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "python_data_fundamentals"
version = "0.0.1"
description = "This is a playground dedicated to the python data fundamentals skill track."
authors = [
  { name = "Angel G." },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["python_data_fundamentals"]
include = ["pyproject.toml", "python_data_fundamentals/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["python_data_fundamentals"]
force-sort-within-sections = true

